--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- custom css file link  -->
   <link rel="stylesheet" href="style.css">
 
-  <title>Anonymous foundation</title>
+  <title>Anonymous</title>
 </head>
 <body>
 
