--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
   <a href="#" class="fab fa-facebook-f"></a>
   <a href="#" class="fab fa-twitter"></a>
   <a href="#" class="fab fa-instagram"></a>
+  <a href="https://github.com/Sudip-526" class="fab fa-github"></a>
+
 </div>
 
 </section>
